# simulate_decision

./: .env.example  .gitignore  Justfile  Makefile  README.md  SKILL.md  conftest.py  default.nix  pyproject.toml  requirements.txt  start-dev.bat
.github/skills/simulate-decision-dev/: SKILL.md
.github/workflows/: ci.yml
data/: jobs.json
data/results/: 0531622d-7635-4a0a-a9dc-f3823ec8c505.json  133d0f1e-13f2-407f-8d7c-7322f4256f4d.json  3afa6ee9-57af-4af6-b4de-be46349d9350.json  63c6db3b-5201-4025-b7f2-785f8a56adc0.json  7b2b9c15-c1c8-4a19-abe9-e8e59af14f66.json  8b9c64cb-08d9-4209-958f-ce2405cdb1a7.json  91c7aca7-e260-40fc-80f1-fd48e7f6c797.json  9d87ca5a-5479-4a10-a4c5-9bc9143c4ed5.json  afb9a71b-80cb-4d79-954b-4db55f4d36d4.json  b80f1165-a1fd-4c94-b7a9-76c2a39dfb0e.json  b9ebdc82-4f8c-44ba-9ad2-68a2bf39b309.json  c6b12794-e6e3-430c-b313-0b052880702b.json  c7a47b9c-54bd-4682-8472-0195357a5c1b.json  c92b968d-9b6e-4dd6-8755-c52307189e4e.json  cb147751-60ce-468d-8c05-06639fa08aca.json  fbf58a58-6302-456d-af20-b4c9d034a8bc.json  fe069d31-5b96-42ed-a64e-0881b2554d50.json
docs/: README.md  data_capture_schema.md
src/simulate_decision/: __init__.py
src/simulate_decision/cli/: __init__.py  main.py
src/simulate_decision/core/: __init__.py  config.py  engine.py  pipeline.py  state.py  storage.py  (+2 more)
tests/: __init__.py  conftest.py  test_api_e2e.py  test_cli.py  test_cli_e2e.py  test_core.py  test_core_e2e.py  test_job_manager.py  test_server.py  test_signatures.py  test_signatures_e2e.py  test_worker_e2e.py
web/: next.config.ts  package-lock.json  package.json
(+16 files in other folders)
